@@ -124,7 +124,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
 
   public JavaBuilder(Executor tasksExecutor) {
     super(BuilderCategory.TRANSLATOR);
-    myTaskRunner = new SequentialTaskExecutor("JavaBuilder pool", tasksExecutor);
+    myTaskRunner = SequentialTaskExecutor.createSequentialApplicationPoolExecutor("JavaBuilder Pool", tasksExecutor);
     //add here class processors in the sequence they should be executed
   }
 
@@ -846,6 +846,13 @@ public class JavaBuilder extends ModuleLevelBuilder {
     }
 
     addCrossCompilationOptions(compilerSdkVersion, options, context, chunk);
+
+    if (!options.contains("--enable-preview")) {
+      LanguageLevel level = JpsJavaExtensionService.getInstance().getLanguageLevel(chunk.representativeTarget().getModule());
+      if (level != null && level.isPreview()) {
+        options.add("--enable-preview");
+      }
+    }
 
     if (addAnnotationProcessingOptions(options, profile)) {
       final File srcOutput = ProjectPaths.getAnnotationProcessorGeneratedSourcesOutputDir(
